frontend --> fixed the issue where the "page-title" was too light and potentially hard for the reader to read. increased the opacity and added a new color variable "--lexos-text-color", so the "{L}exos" stands out more in each of the themes.

--- a/lexos/frontend/css/helpers/base.css
+++ b/lexos/frontend/css/helpers/base.css
@@ -37,10 +37,11 @@
 #lexos-text {
    white-space: nowrap;
    margin-right: var(--gap);
+   color: var(--lexos-text-color);
 }
 
 #page-title {
-   opacity: .5;
+   opacity: .8;
 }
 
 #navbar-walkthrough-button {
