--- a/lexos/frontend/css/themes/basil-dark.css
+++ b/lexos/frontend/css/themes/basil-dark.css
@@ -1,6 +1,7 @@
 :root {
 
     /* Text */
+    --lexos-text-color: #0587DF;
     --text-color: #22628E;
 
     /* Buttons */
