--- a/lexos/frontend/css/themes/indigo-dark.css
+++ b/lexos/frontend/css/themes/indigo-dark.css
@@ -1,6 +1,7 @@
 :root {
 
     /* Text */
+    --lexos-text-color: #8981d0;
     --text-color: #7570A0;
 
     /* Buttons */
