--- a/lexos/frontend/css/themes/mint-dark.css
+++ b/lexos/frontend/css/themes/mint-dark.css
@@ -1,6 +1,7 @@
 :root {
 
     /* Text */
+    --lexos-text-color: #3acaa2 ;
     --text-color: #25715E;
 
     /* Buttons */
