--- a/lexos/frontend/css/themes/mint-light.css
+++ b/lexos/frontend/css/themes/mint-light.css
@@ -1,6 +1,7 @@
 :root {
 
     /* Text */
+    --lexos-text-color: #262626;
     --text-color: #505050;
 
     /* Buttons */
