--- a/lexos/frontend/css/themes/saffron-dark.css
+++ b/lexos/frontend/css/themes/saffron-dark.css
@@ -1,6 +1,7 @@
 :root {
 
     /* Text */
+    --lexos-text-color: #ce4848;
     --text-color: #7d3030;
 
     /* Buttons */
