--- a/lexos/frontend/css/themes/solarized-dark.css
+++ b/lexos/frontend/css/themes/solarized-dark.css
@@ -1,6 +1,7 @@
 :root {
 
     /* Text */
+    --lexos-text-color: #89d8ea;
     --text-color: #6495a0; /*93A1A1*/
 
     /* Buttons */
