--- a/lexos/frontend/css/themes/solarized-light.css
+++ b/lexos/frontend/css/themes/solarized-light.css
@@ -1,6 +1,7 @@
 :root {
 
     /* Text */
+    --lexos-text-color: #3d3d3d;
     --text-color: #586E75;
 
     /* Buttons */
